--- a/portfolio-site/package.json
+++ b/portfolio-site/package.json
@@ -17,13 +17,16 @@
     "animate.css": "^4.1.1",
     "gsap-trial": "^3.11.0",
     "loaders.css": "^0.1.2",
+    "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-loaders": "^3.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "sass": "^1.54.5",
     "typescript": "^4.7.4",
+    "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
