--- a/portfolio-site/package.json
+++ b/portfolio-site/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "animate.css": "^4.1.1",
+    "framer-motion": "^7.2.1",
     "gsap-trial": "^3.11.0",
     "loaders.css": "^0.1.2",
     "node-sass": "^7.0.1",
